# retriever-for-video-transcripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 2_simple_retriever.ipynb  transcript.txt  youtube_api.ipynb
src/: build_dataset.py  cleaning.py  evaluate.py  retrieve.py  retrieve_timestamp.py  urls.py  utils.py
src/dash/: app.py  components.py
src/retriever_for_video_transcripts/: cleaning.py  evaluate.py  main.py  retrieve_timestamp.py  urls.py
tests/: test_build_dataset.py  test_cleaning.py  test_utils.py
