[tool.poetry]
name = "retriever-for-video-transcripts"
version = "0.0.1"
description = "This repo is an example of a RAG buit on solar inverter technical data sheets."
authors = ["Nicolas Favrot <n.favrot@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = 'rag_based_solar_inverter.main:run'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
  "E501",  # line-too-long
  "UP",    # pyupgrade
  "D",     # pydocstyle
]
ignore = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
